--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <nav class="sm:block hidden fixed sm:static right-0 sm:bg-slate-500 bg-slate-700 top-0 sm:h-max h-[100vh] sm:w-max w-[300px] sm:translate-x-0 translate-x-80  duration-500"
             id="navBar">
             <ul class="flex text-lg sm:flex-row flex-col sm:m-0 my-7">
-                <li class="m-2"><a href="#"
+                <li class="m-2"><a href="/"
                         class="my-4  py-2 px-2  hover:bg-slate-600 rounded-sm transition bg-slate-600 sm:px-3 sm:py-2 sm:mx-1">Home</a>
                 </li>
                 <li class="m-2"><a href="../Contact/contact.html"
