--- a/projects/projects.html
+++ b/projects/projects.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Persnoal Portfolio</title>
-    <link href="../src/output.css" rel="stylesheet">
+    <link href="../output.css" rel="stylesheet">
 
 </head>
 
@@ -18,7 +18,7 @@
         <nav class="sm:block hidden fixed sm:static right-0 sm:bg-slate-500 bg-slate-700 top-0 sm:h-max h-[100vh] sm:w-max w-[300px] sm:translate-x-0 duration-500 translate-x-80"
             id="navBar">
             <ul class="flex text-lg sm:flex-row flex-col sm:m-0 my-7">
-                <li class="m-2"><a href="../src/index.html"
+                <li class="m-2"><a href="../index.html"
                         class="my-4  py-2 px-2  hover:bg-slate-600 rounded-sm transition  sm:px-3 sm:py-2 sm:mx-1">Home</a>
                 </li>
                 <li class="m-2"><a href="../Contact/contact.html"
