--- a/index.html
+++ b/index.html
@@ -21,16 +21,16 @@
                 <li class="m-2"><a href="/"
                         class="my-4  py-2 px-2  hover:bg-slate-600 rounded-sm transition bg-slate-600 sm:px-3 sm:py-2 sm:mx-1">Home</a>
                 </li>
-                <li class="m-2"><a href="../Contact/contact.html"
+                <li class="m-2"><a href="./Contact/contact.html"
                         class="my-4  py-2 px-2 hover:bg-slate-600 rounded-sm transition sm:px-3 sm:py-2 sm:mx-1">Contact</a>
                 </li>
-                <li class="m-2"><a href="../projects/projects.html"
+                <li class="m-2"><a href="./projects/projects.html"
                         class="my-4   py-2 px-2 hover:bg-slate-600 rounded-sm transition sm:px-3 sm:py-2 sm:mx-1">Projects</a>
                 </li>
-                <li class="m-2"><a href="../blog/blog.html"
+                <li class="m-2"><a href="./blog/blog.html"
                         class="my-4 py-2 px-2 hover:bg-slate-600 rounded-sm transition sm:px-3 sm:py-2 sm:mx-1">Blog</a>
                 </li>
-                <li class="m-2"><a href="../about/about.html"
+                <li class="m-2"><a href="./about/about.html"
                         class="my-4 py-2 px-2 hover:bg-slate-600 rounded-sm transition sm:px-3 sm:py-2 sm:mx-1">About</a>
                 </li>
             </ul>
@@ -56,7 +56,7 @@
             <button class="bg-zinc-600 py-3 px-4 rounded-md text-white text-xl ">Contact Me</button>
         </section>
 
-        <section class="py-10 flex justify-center items-center gap-10 bg-gray-500 flex-wrap">
+        <section class="py-10 flex justify-center items-center gap-10 bg-gray-500 flex-wrap" id="skillsList">
             <div class="h-[100px] w-[100px] bg-orange-500 rounded-full flex justify-center items-center">HTML</div>
             <div class="h-[100px] w-[100px] bg-orange-500 rounded-full flex justify-center items-center">CSS</div>
             <div class="h-[100px] w-[100px] bg-orange-500 rounded-full flex justify-center items-center">Tailwind</div>
