--- a/index.html
+++ b/index.html
@@ -56,16 +56,23 @@
             <button class="bg-zinc-600 py-3 px-4 rounded-md text-white text-xl ">Contact Me</button>
         </section>
 
-        <section class="py-10 flex justify-center items-center gap-10 bg-gray-500 flex-wrap" id="skillsList">
-            <div class="h-[100px] w-[100px] bg-orange-500 rounded-full flex justify-center items-center">HTML</div>
-            <div class="h-[100px] w-[100px] bg-orange-500 rounded-full flex justify-center items-center">CSS</div>
-            <div class="h-[100px] w-[100px] bg-orange-500 rounded-full flex justify-center items-center">Tailwind</div>
-            <div class="h-[100px] w-[100px] bg-orange-500 rounded-full flex justify-center items-center">JavaScript
+        <section class="py-10 flex justify-center items-center gap-10 bg-gray-500 flex-wrap overflow-hidden" id="skillsList">
+            <div class="h-[100px] w-[100px] bg-slate-800 rounded-full flex justify-center items-center animate-slide">HTML</div>
+
+            <div class="h-[100px] w-[100px] bg-orange-500 rounded-full flex justify-center items-center translate-x-[100vw] animate-[slide_1s_ease-in-out_.5s_1_forwards]">CSS</div>
+
+            <div class="h-[100px] w-[100px] bg-orange-500 rounded-full flex justify-center items-center translate-x-[100vw] animate-[slide_1s_ease-in-out_.7s_1_forwards]">Tailwind</div>
+
+            <div class="h-[100px] w-[100px] bg-orange-500 rounded-full flex justify-center items-center translate-x-[100vw] animate-[slide_1s_linear_.9s_1_forwards]">JavaScript
             </div>
-            <div class="h-[100px] w-[100px] bg-orange-500 rounded-full flex justify-center items-center">React</div>
-            <div class="h-[100px] w-[100px] bg-orange-500 rounded-full flex justify-center items-center">NodeJs</div>
-            <div class="h-[100px] w-[100px] bg-orange-500 rounded-full flex justify-center items-center">Express</div>
-            <div class="h-[100px] w-[100px] bg-orange-500 rounded-full flex justify-center items-center">Mongodb</div>
+
+            <div class="h-[100px] w-[100px] bg-orange-500 rounded-full flex justify-center items-center translate-x-[100vw] animate-[slide_1s_linear_1.1s_1_forwards]">React</div>
+
+            <div class="h-[100px] w-[100px] bg-orange-500 rounded-full flex justify-center items-center translate-x-[100vw] animate-[slide_1s_linear_1.3s_1_forwards]">NodeJs</div>
+
+            <div class="h-[100px] w-[100px] bg-orange-500 rounded-full flex justify-center items-center translate-x-[100vw] animate-[slide_1s_linear_1.5s_1_forwards]">Express</div>
+
+            <div class="h-[100px] w-[100px] bg-orange-500 rounded-full flex justify-center items-center translate-x-[100vw] animate-[slide_1s_linear_1.7s_1_forwards]">Mongodb</div>
         </section>
     </main>
 
