image address fixed

--- a/index.html
+++ b/index.html
@@ -91,45 +91,45 @@
                 <div class="grid grid-cols-2 sm:grid-cols-4 gap-8 place-items-center" id="allSkills">
                     <div
                         class="w-[100px] h-[100px] bg-orange-600 flex justify-center items-center flex-col text-white  rounded-full overflow-hidden relative">
-                        <img src="/images/html-logo-png-3.png" alt="" class="w-full h-full object-contain">
+                        <img src="./images/html-logo-png-3.png" alt="" class="w-full h-full object-contain">
 
                     </div>
                     <div
                         class="w-[100px] h-[100px] bg-orange-600 flex justify-center items-center text-white  rounded-full relative">
-                        <img src="/images/css.png" alt="" class="w-[80px] h-[80px] object-contain">
+                        <img src="./images/css.png" alt="" class="w-[80px] h-[80px] object-contain">
 
                     </div>
                     <div
                         class="w-[100px] h-[100px] bg-orange-600 flex justify-center items-center text-white  rounded-full relative">
-                        <img src="/images/tailwind-css-icon.webp" alt="" class="w-[80px] h-[80px] object-contain">
+                        <img src="./images/tailwind-css-icon.webp" alt="" class="w-[80px] h-[80px] object-contain">
 
                     </div>
                     <div
                         class="w-[100px] h-[100px] bg-orange-600 flex justify-center items-center text-white  rounded-full relative">
-                        <img src="/images/javascript-logo-7539.png" alt="" class="w-[80px] h-[80px] object-contain">
+                        <img src="./images/javascript-logo-7539.png" alt="" class="w-[80px] h-[80px] object-contain">
 
                     </div>
                     <div
                         class="w-[100px] h-[100px] bg-orange-600 flex justify-center items-center text-white  rounded-full relative">
-                        <img src="/images/react-1-logo.png" alt=""
+                        <img src="./images/react-1-logo.png" alt=""
                             class="w-[80px] h-[80px] object-contain rounded-[100vw]">
 
                     </div>
 
                     <div
                         class="w-[100px] h-[100px] bg-orange-600 flex justify-center items-center text-white  rounded-full relative">
-                        <img src="/images/nodejs.png.crdownload" alt=""
+                        <img src="./images/nodejs.png.crdownload" alt=""
                             class="w-[80px] h-[80px] object-contain rounded-[100vw]">
 
                     </div>
                     <div
                         class="w-[100px] h-[100px] bg-orange-600 flex justify-center items-center text-white  rounded-full relative">
-                        <img src="/images/express.png" alt="" class="w-[80px] h-[80px] object-contain rounded-[100vw]">
+                        <img src="./images/express.png" alt="" class="w-[80px] h-[80px] object-contain rounded-[100vw]">
                     </div>
 
                     <div
                         class="w-[100px] h-[100px] bg-orange-600 flex justify-center items-center text-white  rounded-full">
-                        <img src="/images/mongoDb.png" alt="" class="w-[80px] h-[80px] object-contain ">
+                        <img src="./images/mongoDb.png" alt="" class="w-[80px] h-[80px] object-contain ">
 
                     </div>
 
@@ -147,7 +147,7 @@
 
             <div class=" flex flex-wrap justify-center items-start gap-7" id="projectList">
                 <div class="w-[300px] h-[250px] bg-blue-600 rounded-md shadow-0xl relative  cursor-pointer">
-                    <img src="images/desktop-preview-1.jpg" alt="" class="object-cover w-full h-full">
+                    <img src="./images/desktop-preview-1.jpg" alt="" class="object-cover w-full h-full">
 
                     <div
                         class="absolute inset-0 p-6 bg-gradient-to-t from-cyan-900 to-blue-50  z-10 opacity-0 hover:opacity-100 duration-300">
@@ -163,7 +163,7 @@
                     </div>
                 </div>
                 <div class="w-[300px] h-[250px] bg-blue-600 rounded-md shadow-0xl relative cursor-pointer">
-                    <img src="images/desktop-preview-2.jpg" alt="" class="object-cover w-full h-full">
+                    <img src="./images/desktop-preview-2.jpg" alt="" class="object-cover w-full h-full">
                     <div
                         class="absolute inset-0 p-6 bg-gradient-to-t from-cyan-900 to-blue-50  z-10 opacity-0 hover:opacity-100 duration-300">
                         <h2 class="py-2 text-2xl font-semibold"><a
@@ -177,7 +177,7 @@
                     </div>
                 </div>
                 <div class="w-[300px] h-[250px] bg-blue-600 rounded-md shadow-0xl relative cursor-pointer">
-                    <img src="images/desktop-preview-3.jpg" alt="" class="object-cover w-full h-full">
+                    <img src="./images/desktop-preview-3.jpg" alt="" class="object-cover w-full h-full">
                     <div
                         class="absolute inset-0 p-6 bg-gradient-to-t from-cyan-900 to-blue-50  z-10 opacity-0 hover:opacity-100 duration-300">
                         <h2 class="py-2 text-2xl font-semibold"><a
@@ -192,7 +192,7 @@
                     </div>
                 </div>
                 <div class="w-[300px] h-[250px] bg-blue-600 rounded-md shadow-0xl relative cursor-pointer">
-                    <img src="images/desktop-preview-4.jpg" alt="" class="object-cover w-full h-full">
+                    <img src="./images/desktop-preview-4.jpg" alt="" class="object-cover w-full h-full">
                     <div
                         class="absolute inset-0 p-6 bg-gradient-to-t from-cyan-900 to-blue-50  z-10 opacity-0 hover:opacity-100 duration-300">
                         <h2 class="py-3 text-2xl font-semibold"><a
@@ -207,7 +207,7 @@
                     </div>
                 </div>
                 <div class="w-[300px] h-[250px] bg-blue-600 rounded-md shadow-0xl relative cursor-pointer">
-                    <img src="images/desktop-preview-5.jpg" alt="" class="object-cover w-full h-full">
+                    <img src="./images/desktop-preview-5.jpg" alt="" class="object-cover w-full h-full">
                     <div
                         class="absolute inset-0 p-6 bg-gradient-to-t from-cyan-900 to-blue-50  z-10 opacity-0 hover:opacity-100 duration-300">
                         <h2 class="py-3 text-2xl font-semibold"><a
@@ -478,14 +478,14 @@
                 </button>
             </div>
             <div class="w-full sm:w-[50%]">
-                <img src="/images/followMeBg.jpg" alt="" class="object-cover w-full h-full">
+                <img src="./images/followMeBg.jpg" alt="" class="object-cover w-full h-full">
             </div>
         </section>
     </main>
 
     <footer class="sm:h-[60vh] h-[60vh] flex sm:flex-row flex-col justify-between items-center py-5 px-8 my-10">
         <div class="sm:w-[50%] w-full">
-            <img src="/images/followMeBg.jpg" alt="" class="object-cover w-full h-full">
+            <img src="./images/followMeBg.jpg" alt="" class="object-cover w-full h-full">
         </div>
         <div class="p-6 w-[90%] sm:[80%] md:h-[50vh] md:w-[50%]">
             <div class="flex justify-between items-center flex-wrap">
