fixed image address

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 
                     <div
                         class="w-[100px] h-[100px] bg-orange-600 flex justify-center items-center text-white  rounded-full relative">
-                        <img src="./images/nodejs.png.crdownload" alt=""
+                        <img src="./images/node_js.webp" alt=""
                             class="w-[80px] h-[80px] object-contain rounded-[100vw]">
 
                     </div>
