--- a/index.html
+++ b/index.html
@@ -503,7 +503,7 @@
         </div>
     </footer>
 
-    <script src="../script.js"></script>
+    <script src="./script.js"></script>
 </body>
 
 </html>
