--- a/index.html
+++ b/index.html
@@ -483,7 +483,7 @@
         </section>
     </main>
 
-    <footer class="sm:h-[60vh] h-[60vh] flex sm:flex-row flex-col justify-between items-center py-5 px-8 my-10">
+    <footer class="sm:h-[60vh] h-max flex sm:flex-row flex-col-reverse justify-between items-center py-5 px-8 my-10">
         <div class="sm:w-[50%] w-full">
             <img src="./images/followMeBg.jpg" alt="" class="object-cover w-full h-full">
         </div>
@@ -496,7 +496,7 @@
             <form class="my-6">
                 <label for="emailNews" class="block">Enter your email</label>
                 <div>
-                    <input type="email" id="emailNews" class="border-black border-b-2 px-4 py-2 outline-none">
+                    <input type="email" id="emailNews" class="border-black border-b-2 px-4 py-2 outline-none mb-2">
                     <button class="px-6 py-2 bg-orange-500 text-white rounded-[100vw]">Submit</button>
                 </div>
             </form>
