--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
     </header>
 
-    <main class="">
+    <main class="overflow-x-hidden">
 
         <section>
             <div
@@ -74,8 +74,8 @@
                         </button>
                     </div>
                 </div>
-                <div class="sm:w-[50%] ">
-                    <img src="images/hero_image.jpg" alt="" class="w-full h-full">
+                <div class="sm:w-[50%] h-full">
+                    <img src="./images/myProfileLeft.png" alt="" class="w-full h-full object-contain">
                 </div>
             </div>
         </section>
@@ -484,8 +484,8 @@
     </main>
 
     <footer class="sm:h-[60vh] h-max flex sm:flex-row flex-col-reverse justify-between items-center py-5 px-8 my-10">
-        <div class="sm:w-[50%] w-full">
-            <img src="./images/followMeBg.jpg" alt="" class="object-cover w-full h-full">
+        <div class="sm:w-[50%] w-full h-full">
+            <img src="./images/myProfile.png" alt="" class="object-contain w-full h-full">
         </div>
         <div class="p-6 w-[90%] sm:[80%] md:h-[50vh] md:w-[50%]">
             <div class="flex justify-between items-center flex-wrap">
