added generic footer and header

--- a/index.html
+++ b/index.html
@@ -12,51 +12,9 @@
 
 <body>
 
-    <header class="bg-[#dbb89a] text-white py-5 px-12 relative overflow-x-hidden">
-        <div class="absolute left-0 top-2 w-[100vw] h-[3px] bg-white "></div>
-        <div class="p-3 flex justify-between">
-            <h2 class="text-2xl font-bold">PersnoalPortfolio</h2>
-            <div class="sm:hidden" id="hamburger">
-                <div class="w-[30px] h-[3px] my-2 bg-white"></div>
-                <div class="w-[30px] h-[3px] my-2 bg-white"></div>
-                <div class="w-[30px] h-[3px] my-2 bg-white"></div>
-            </div>
-        </div>
-        <nav class="flex justify-between items-center  border-t-2 h-max flex-col gap-5 sm:flex-row">
-            <div>
-                <i class="fa fa-search cursor-pointer"></i>
-                <input class="bg-transparent px-4 py-3 outline-none text-white " type="search" name="search" id="search"
-                    placeholder="Search">
-            </div>
-            <ul class="justify-center items-center py-7  gap-1 text-white hidden fixed right-0 top-0 h-[100vh] w-[300px] flex-wrap bg-slate-700 z-10 translate-x-80 duration-300 sm:flex sm:relative sm:h-max sm:w-max sm:bg-transparent sm:p-0 sm:translate-x-0"
-                id="navBar">
-                <li class="">
-                    <a href="/index.html"
-                        class="px-4 py-3 text-orange-600  rounded-md  hover:text-orange-600 hover:rounded-md duration-100">
-                        Portfolio
-                    </a>
-                </li>
-                <li>
-                    <a href="./blog/blog.html" class="px-4 py-3 hover:text-orange-600 hover:rounded-md duration-100">
-                        Blog
-                    </a>
-                </li>
-                <li>
-                    <a href="" class="px-8 py-3  hover:text-orange-600 duration-100 border-2 hidden sm:block">
-                        Contact Us
-                    </a>
-                </li>
-                <li class="sm:hidden fixed right-5 top-6 cursor-pointer" id="closeMenuBtn">&Cross;</li>
-            </ul>
-        </nav>
-
-        <div class="absolute left-0 bottom-2 w-[100vw] h-[3px] bg-white"></div>
-
-
-    </header>
+  
 
     <main class="overflow-x-hidden">
-
         <section>
             <div
                 class="h-max md:h-[80vh] flex justify-around items-center flex-col  lg:px-40 md:px-24 md:py-4 px-6 py-8 sm:flex-row bg-[#c9c3b1]">
@@ -339,7 +297,7 @@
             </div>
         </section>
 
-        <section class="md:h-[50vh] flex justify-center items-center flex-col relative bg-zinc-400 gap-3 py-8">
+        <section class=" flex justify-center items-center flex-col relative bg-zinc-400 gap-3 py-8">
             <div>
                 <h2 class="text-center text-[3rem] font-bold">Feedback from Clients</h2>
             </div>
@@ -483,27 +441,9 @@
         </section>
     </main>
 
-    <footer class="sm:h-[60vh] h-max flex sm:flex-row flex-col-reverse justify-between items-center py-5 px-8 my-10">
-        <div class="sm:w-[50%] w-full h-full">
-            <img src="./images/myProfile.png" alt="" class="object-contain w-full h-full">
-        </div>
-        <div class="p-6 w-[90%] sm:[80%] md:h-[50vh] md:w-[50%]">
-            <div class="flex justify-between items-center flex-wrap">
-                <p>faheemkhan.pg@gmail.com</p>
-                <p>addresss: degree collage pharpur Dik</p>
-            </div>
-            <h2 class="font-bold text-3xl my-6">Stay Informed,<br> Join our newsletter</h2>
-            <form class="my-6">
-                <label for="emailNews" class="block">Enter your email</label>
-                <div>
-                    <input type="email" id="emailNews" class="border-black border-b-2 px-4 py-2 outline-none mb-2">
-                    <button class="px-6 py-2 bg-orange-500 text-white rounded-[100vw]">Submit</button>
-                </div>
-            </form>
-        </div>
-    </footer>
 
-    <script src="./script.js"></script>
+
+    <script src="script.js"></script>
 </body>
 
 </html>
