--- a/blog.html
+++ b/blog.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Persnoal Portfolio</title>
     <link href="./output.css" rel="stylesheet">
-    <link rel="stylesheet" href="../output.css">
+    <link rel="stylesheet" href="./output.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
 
@@ -45,7 +45,7 @@
 
     
 
-    <script src="../script.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
