added hover effect on skills

--- a/index.html
+++ b/index.html
@@ -46,51 +46,56 @@
             </p>
             <div class="my-8">
 
-                <div class="grid grid-cols-2 sm:grid-cols-4 gap-8 place-items-center" id="allSkills">
+                <div class="grid grid-cols-2 sm:grid-cols-4 gap-8 place-items-center cursor-pointer" id="allSkills">
                     <div
-                        class="w-[100px] h-[100px] bg-orange-600 flex justify-center items-center flex-col text-white  rounded-full overflow-hidden relative">
+                        class="w-[100px] h-[100px] bg-orange-600 flex justify-center items-center flex-col text-white  rounded-full  relative group">
                         <img src="./images/html-logo-png-3.png" alt="" class="w-full h-full object-contain">
+                        <p class="group-hover:translate-y-6 -z-10 duration-200 group-hover:text-black absolute bottom-0 font-bold">HTML</p>
 
                     </div>
                     <div
-                        class="w-[100px] h-[100px] bg-orange-600 flex justify-center items-center text-white  rounded-full relative">
+                        class="w-[100px] h-[100px] bg-orange-600 flex justify-center items-center text-white  rounded-full relative group">
                         <img src="./images/css.png" alt="" class="w-[80px] h-[80px] object-contain">
-
+                        <p class="group-hover:translate-y-6 -z-10 duration-200 group-hover:text-black absolute bottom-0 font-bold">Css</p>
                     </div>
                     <div
-                        class="w-[100px] h-[100px] bg-orange-600 flex justify-center items-center text-white  rounded-full relative">
+                        class="w-[100px] h-[100px] bg-orange-600 flex justify-center items-center text-white  rounded-full relative group">
                         <img src="./images/tailwind-css-icon.webp" alt="" class="w-[80px] h-[80px] object-contain">
+                        <p class="group-hover:translate-y-6 -z-10 duration-200 group-hover:text-black absolute bottom-0 font-bold">Tailwind css</p>
 
                     </div>
                     <div
-                        class="w-[100px] h-[100px] bg-orange-600 flex justify-center items-center text-white  rounded-full relative">
+                        class="w-[100px] h-[100px] bg-orange-600 flex justify-center items-center text-white  rounded-full relative group">
                         <img src="./images/javascript-logo-7539.png" alt="" class="w-[80px] h-[80px] object-contain">
+                        <p class="group-hover:translate-y-6 -z-10 duration-200 group-hover:text-black absolute bottom-0 font-bold">javascript</p>
 
                     </div>
                     <div
-                        class="w-[100px] h-[100px] bg-orange-600 flex justify-center items-center text-white  rounded-full relative">
+                        class="w-[100px] h-[100px] bg-orange-600 flex justify-center items-center text-white  rounded-full relative group">
                         <img src="./images/react-1-logo.png" alt=""
                             class="w-[80px] h-[80px] object-contain rounded-[100vw]">
+                            <p class="group-hover:translate-y-6 -z-10 duration-200 group-hover:text-black absolute bottom-0 font-bold">React</p>
 
                     </div>
 
                     <div
-                        class="w-[100px] h-[100px] bg-orange-600 flex justify-center items-center text-white  rounded-full relative">
+                        class="w-[100px] h-[100px] bg-orange-600 flex justify-center items-center text-white  rounded-full relative group">
                         <img src="./images/node_js.webp" alt=""
                             class="w-[80px] h-[80px] object-contain rounded-[100vw]">
+                            <p class="group-hover:translate-y-6 -z-10 duration-200 group-hover:text-black absolute bottom-0 font-bold">NodeJs</p>
 
                     </div>
                     <div
-                        class="w-[100px] h-[100px] bg-orange-600 flex justify-center items-center text-white  rounded-full relative">
+                        class="w-[100px] h-[100px] bg-orange-600 flex justify-center items-center text-white  rounded-full relative group">
                         <img src="./images/express.png" alt="" class="w-[80px] h-[80px] object-contain rounded-[100vw]">
+                        <p class="group-hover:translate-y-6 -z-10 duration-200 group-hover:text-black absolute bottom-0 font-bold">Express</p>
                     </div>
 
                     <div
-                        class="w-[100px] h-[100px] bg-orange-600 flex justify-center items-center text-white  rounded-full">
+                        class="w-[100px] h-[100px] bg-orange-600 flex justify-center items-center text-white  rounded-full relative group">
                         <img src="./images/mongoDb.png" alt="" class="w-[80px] h-[80px] object-contain ">
-
+                        <p class="group-hover:translate-y-6 -z-10 duration-200 group-hover:text-black absolute bottom-0 font-bold">MongoDb</p>
                     </div>
-
                 </div>
             </div>
         </section>
