--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     </div>
                 </div>
                 <div class="sm:w-[50%] h-full">
-                    <img src="./images/myProfileLeft.png" alt="" class="w-full h-full object-contain animate-slideImg">
+                    <img src="./images/myProfileLeft.png" alt="" class="w-full h-full object-contain translate-x-[200px] animate-[slideImg_.8s_ease-in-out_1_forwards]">
                 </div>
             </div>
         </section>
